Added zgc samples